# store_api

./: .coverage  .env.exemplo  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  pytest.ini
store/: main.py
store/controllers/: product.py
store/core/: config.py
store/db/: mongo.py
store/schemas/: base.py  product.py
store/usecases/: product.py  product_sync.py
tests/: conftest.py  factories.py
tests/usecases/: _resolver_test_product_crud_async.py  test_product.py  test_product_crud_sync.py
