[project]
name = "store-api"
version = "0.1.0"
description = "Projeto de aprendizado de TDD usando MongoDB"
authors = [
    {name = "mathfis",email = "matfis@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "3.11.9"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "motor (>=3.7.1,<4.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "pytest-asyncio (>=1.1.0,<2.0.0)",
    "pre-commit (>=4.3.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"

